Implemented user-validation, added PasswordDigest, refactor signUpCommand.

--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -6,7 +6,7 @@ header.links.faculties=Faculties
 header.links.contacts=Contacts
 header.log_in_button=Log in
 header.sign_up_button=Sign up
-
+header.log_out_button=Log out
 login.title=Sign in
 login.welcome_back=Welcome back!
 login.email=Email
@@ -15,7 +15,6 @@ login.password=Password
 login.password_placeholder=Enter Password
 login.sign_in=Sign in
 login.forget_password=Forget password?
-
 signup.title=Sign up
 signup.sign_up=Sign up
 signup.first_name=First name
@@ -28,6 +27,11 @@ signup.passport_id=Passport id
 signup.passport_id_placeholder=Enter your passport id
 signup.password=Password
 signup.password_placeholder=Enter Password
+signup.confirm_password=Confirm password
+signup.confirm_password_placeholder=Repeat password
 signup.sign_up_button=Sign up
-signup.already_have_account=>Already have an account?
+signup.already_have_account=Already have an account?
 signup.sign_in=Sign in
+signup.alert_header=Input error
+signup.alert_message_incorrect_email=User with this email already exists, please use another email.
+signup.alert_message_incorrect_data=You have entered incorrect data.\nFirst- and lastname must contain only letters.\nThe email must be entered correctly (for example university@gmail.com).\nPassport data must contain a series (2 letters) and a number (7 digits) of the passport (for example AB1112233).\nThe password must have at least 1 uppercase and 1 lowercase letter, 1 number and be at least 8 characters long.
