--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -4,9 +4,11 @@ header.links.home=Home
 header.links.about=About
 header.links.faculties=Faculties
 header.links.contacts=Contacts
+header.links.profile=Profile
 header.log_in_button=Log in
 header.sign_up_button=Sign up
 header.log_out_button=Log out
+
 login.title=Sign in
 login.welcome_back=Welcome back!
 login.email=Email
@@ -15,6 +17,7 @@ login.password=Password
 login.password_placeholder=Enter Password
 login.sign_in=Sign in
 login.forget_password=Forget password?
+
 signup.title=Sign up
 signup.sign_up=Sign up
 signup.first_name=First name
@@ -33,5 +36,39 @@ signup.sign_up_button=Sign up
 signup.already_have_account=Already have an account?
 signup.sign_in=Sign in
 signup.alert_header=Input error
-signup.alert_message_incorrect_email=User with this email already exists, please use another email.
-signup.alert_message_incorrect_data=You have entered incorrect data.\nFirst- and lastname must contain only letters.\nThe email must be entered correctly (for example university@gmail.com).\nPassport data must contain a series (2 letters) and a number (7 digits) of the passport (for example AB1112233).\nThe password must have at least 1 uppercase and 1 lowercase letter, 1 number and be at least 8 characters long.
+
+error.title=Error
+error.404.header=Not found (404)
+error.404.message=Sorry, the page you are looking for does not exist.
+error.500.header=Internal server error (500)
+error.500.message=Sorry, something went wrong(
+
+profile.title=Profile
+profile.personal.data.name=Name
+profile.personal.data.surname=Surname
+profile.personal.data.passport_data=Passport data
+profile.personal.data.edit_button=Edit profile
+profile.application.data.header=Application
+profile.application.data.faculty=Faculty
+profile.application.data.date_of_application=Date of application
+profile.application.data.first_subject_points=Points for the first subject
+profile.application.data.second_subject_points=Points for the second subject
+profile.application.data.third_subject_points=Points for the third subject
+profile.application.data.confirmed=Confirmed
+profile.application.data.confirmation_date=Confirmation date
+profile.application.data.rejection_reason=Rejection reason
+profile.application.add_application_button=Apply for admission
+
+edit_profile.title=Edit profile
+edit_profile.first_name=First name
+edit_profile.first_name_placeholder=Enter your first name
+edit_profile.last_name=Last name
+edit_profile.last_name_placeholder=Enter your last name
+edit_profile.email=Email
+edit_profile.email_placeholder=Enter Email
+edit_profile.passport_id=Passport id
+edit_profile.passport_id_placeholder=Enter your passport id
+edit_profile.edit_button=Edit
+edit_profile.alert_header=Input error
+
+
