Impl admin's tables.

--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -1,5 +1,5 @@
 header.change_locale=RU/EN
-header.university_name=High tech university
+header.university_name=HighTech University
 header.links.home=Home
 header.links.about=About us
 header.links.faculties=Faculties
@@ -114,3 +114,29 @@ edit_application.points_third_subject=Points for the third subject
 edit_application.points_third_subject_placeholder=Enter points for the third subject
 edit_application.edit_button=Edit
 
+
+faculties.EECS.id=1
+faculties.EECS.short_name=EECS
+faculties.EECS.full_name=Electrical Engineering and Computer Science
+faculties.EECS.short_description=EECS IS WHERE THE FUTURE IS INVENTED.
+faculties.MECHE.id=2
+faculties.MECHE.short_name=MECHE
+faculties.MECHE.full_name=Mechanical Engineering
+faculties.MECHE.short_description=Explore our Global Impact.
+faculties.DSS.id=3
+faculties.DSS.short_name=DSS
+faculties.DSS.full_name=Data, Systems, and Society
+faculties.DSS.short_description=Data, Systems, and Society (DSS) is committed to addressing complex societal challenges by advancing education and research at the intersection of statistics, data science, information and decision systems, and social sciences.
+//
+subjects.Maths.id=1
+subjects.Maths.short_name=Maths
+subjects.Maths.full_name=Mathematics
+subjects.Phys.id=2
+subjects.Phys.short_name=Phys
+subjects.Phys.full_name=Physics
+subjects.Inform.id=3
+subjects.Inform.short_name=Inform
+subjects.Inform.full_name=Informatics
+subjects.Sociol.id=4
+subjects.Sociol.short_name=Sociol
+subjects.Sociol.full_name=Sociology
