--- a/src/main/resources/locale.properties
+++ b/src/main/resources/locale.properties
@@ -126,7 +126,7 @@ faculties.MECHE.short_description=Explore our Global Impact.
 faculties.DSS.id=3
 faculties.DSS.short_name=DSS
 faculties.DSS.full_name=Data, Systems, and Society
-faculties.DSS.short_description=Data, Systems, and Society (DSS) is committed to addressing complex societal challenges by advancing education and research at the intersection of statistics, data science, information and decision systems, and social sciences.
+faculties.DSS.short_description=Improve knowledge in statistics, Data Science and Society.
 //
 subjects.Maths.id=1
 subjects.Maths.short_name=Maths
@@ -140,3 +140,11 @@ subjects.Inform.full_name=Informatics
 subjects.Sociol.id=4
 subjects.Sociol.short_name=Sociol
 subjects.Sociol.full_name=Sociology
+
+home.title=Home
+home.university.name=HighTech University
+home.university.short_description_first_part=The HTE community is driven by a shared purpose: to make a better world through education, research, and innovation.
+home.university.short_description_second_part=We are fun and quirky, elite but not elitist, inventive and artistic, obsessed with numbers, and welcoming to talented people regardless of where they come from.
+home.university.visit_us_button=Visit Us To know More
+home.university.faculties.title=Our Faculties
+home.university.faculties.short_description=Our Faculties are renowned for focusing precisely on the subject area and getting the most out of it.
