Added JavaDoc for Service and Dao layers.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,20 @@
     </servlet-mapping>
 
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/WEB-INF/pages/error/error_404.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/WEB-INF/pages/error/error_403.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/WEB-INF/pages/error/error_500.jsp</location>
+    </error-page>
+
+
     <filter>
         <filter-name>EncodingFilter</filter-name>
         <filter-class>com.epam.admissions.office.controller.filter.EncodingFilter</filter-class>
